# Shell-Agent-MCP-Toolkit

./: .gitignore  README.md  pyproject.toml
src/mcp_shell_toolkit/: __init__.py  __main__.py  server.py
src/mcp_shell_toolkit/clients/: mobaxterm.py  remote_shell_client.py  xshell.py
src/mcp_shell_toolkit/configs/: remote_shell_config.py
src/mcp_shell_toolkit/models/: __init__.py  context.py
src/mcp_shell_toolkit/tools/: remote_shell_tool.py
src/mcp_shell_toolkit/types/: __init__.py  remote_shell_type.py
src/remote_shell_toolkit/: __init__.py  __main__.py  server.py
src/remote_shell_toolkit/clients/: remote_shell_client.py
src/remote_shell_toolkit/configs/: __init__.py  remote_shell_config.py
src/remote_shell_toolkit/types/: __init__.py
