[project]
name = "hw-mcp-shell-toolkit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fast-agent-mcp>=0.2.58",
    "hatchling>=1.27.0",
    "keyboard>=0.13.5",
    "mcp[cli]>=1.13.1",
    "pyperclip>=1.9.0",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "requests>=2.32.5",
]

[project.scripts]
"hw-mcp-shell-toolkit" = "mcp_shell_toolkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_shell_toolkit"]
