[project]
name = "hw-remote-shell-toolkit"
version = "0.1.9"
description = "Shell Agent 的妙妙工具箱"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.27.0",
    "keyboard>=0.13.5",
    "mcp[cli]>=1.16.0",
    "pyinstaller>=6.16.0",
    "pyperclip>=1.11.0",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
]

[project.scripts]
"hw-remote-shell-toolkit" = "remote_shell_toolkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remote_shell_toolkit"]
